Добавление функции add-most-populars